--- a/package.json
+++ b/package.json
@@ -4,7 +4,7 @@
   "description": "",
   "main": "index.js",
   "scripts": {
-    "build": "gulp"
+    "prod": "gulp"
   },
   "keywords": [],
   "author": "",
